# telegram-agregator

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  BUSINESS_RULES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TZ_Telegram_Lead_Aggregator.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-backend-dev.yml  cd-backend-prod.yml  ci-backend.yml  ci-docs.yml  ci-frontend.yml  release.yml  security.yml  smoke-dev-vps.yml
backend/: README.md  pyproject.toml
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_initial.py  0002_chat_id_nullable.py
backend/prompts/: registry.py
backend/prompts/v1/: classify_lead.md  enrich_profile.md
backend/seeds/: keyword_triggers.yaml  sources.yaml
backend/src/api/: __init__.py  main.py
backend/src/api/routers/: __init__.py  leads.py  sources.py  triggers.py
backend/src/bot/: __init__.py  __main__.py  main.py
backend/src/listener/: __init__.py  __main__.py  main.py  processing.py
backend/src/shared/: __init__.py  config.py
backend/src/shared/db/: __init__.py  models.py  seed.py  session.py
backend/src/shared/db/tables/: __init__.py  keyword_trigger.py  lead_analysis.py  raw_message.py  sender_profile.py  telegram_source.py
backend/src/shared/llm/: __init__.py  client.py
backend/src/shared/observability/: __init__.py  logging.py  metrics.py
backend/src/shared/scoring/: __init__.py  calculator.py
backend/src/shared/telegram/: __init__.py  bootstrap.py  errors.py  session_manager.py
backend/src/worker/: __init__.py  celery_app.py
backend/src/worker/tasks/: __init__.py  classify_llm.py  enrich_profile.py  filter_keywords.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_listener_handler.py  test_listener_reconciliation.py  test_migration_0001.py  test_migration_roundtrip.py  test_seed.py
backend/tests/unit/: test_bootstrap.py  test_db_metadata.py  test_errors.py  test_processing.py  test_session_manager.py  test_smoke.py
docs/: README.md  architecture.md  business_rules.md  dod.md  dor.md  prompts-versioning.md  security.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-layout.md  0003-telethon-user-session-not-bot-api.md  0004-claude-primary-gpt4-fallback.md  0005-vercel-frontend-vps-backend.md  0006-celery-queue-postgres-ledger.md  0007-drop-pnpm-workspace-until-shared-packages.md  0008-db-conventions.md  0009-dev-vps-frankfurt.md  TEMPLATE.md
docs/api/: openapi.yaml
docs/retro/: TEMPLATE.md  sprint-00-kickoff.md
docs/runbook/: README.md  db-restore.md  llm-cost-spike.md  redis-down.md  telethon-ban.md  wireguard-split-tunnel.md
docs/superpowers/plans/: 2026-04-24-db-foundation-plan.md  2026-05-12-feature-03-listener-phase1.md
docs/superpowers/specs/: 2026-04-24-db-foundation-design.md  2026-05-12-feature-03-listener-design.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/analytics/: page.tsx
frontend/src/app/(admin)/leads/: page.tsx
frontend/src/app/(admin)/settings/: page.tsx
frontend/src/app/(admin)/sources/: page.tsx
frontend/src/app/(admin)/triggers/: page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/components/: providers.tsx
frontend/src/components/ui/: .gitkeep
frontend/src/lib/: api-client.ts  auth.ts  query-client.ts
frontend/src/test/: smoke.test.tsx
infra/: README.md
infra/compose/: docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml
infra/docker/: .dockerignore  backend.Dockerfile  entrypoint.sh  frontend.Dockerfile
infra/env/: backend.env.example
infra/nginx/: api.conf
infra/scripts/: backup-db.sh  deploy.sh  rotate-session.sh
